# the-server

./: .gitignore  .golangci.yml  BUILD.bazel  MODULE.bazel  README.md  config.yaml  go.mod  go.sum
cmd/api-server/: BUILD.bazel  main.go  main_test.go
cmd/server/: main.go
internal/middleware/: headers.go  logging.go  tracing.go
internal/models/: user.go
internal/providers/config/: configuration.go
internal/providers/database/: common.go  errors.go  logger.go
internal/providers/database/mysql/: errors.go  simple.go  split.go
internal/providers/database/sqlite/: errors.go  sqlite.go
internal/providers/logging/: context.go  logging.go
internal/providers/tracing/: errors.go  processors.go  tracing.go
internal/router/: router.go  router_middleware.go  serve.go
internal/router/routes/: root.go
internal/router/routes/user/: user.go
