# This file tells Bazel what to build.
#
# The part that loads the "gazelle" rule and declares the "gazelle" target
# are hand-written. Gazelle can be run with:
#
#     bazel run //:gazelle

load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/kmai/go-project-template
gazelle(name = "gazelle")
